crates/yakui-widgets/tests/snapshots/column_min.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 38
expression: view
---
- ListWidget pos(0, 0) size(100, 200)
  - ColoredBoxWidget pos(0, 0) size(50, 50)
  - ColoredBoxWidget pos(0, 50) size(100, 50)
  - ColoredBoxWidget pos(0, 100) size(50, 100)

