crates/yakui-widgets/tests/snapshots/pad_basic.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 207
expression: view
---
- AlignWidget pos(0, 0) size(1000, 1000)
  - ColoredBoxWidget pos(0, 0) size(90, 90)
    - PadWidget pos(0, 0) size(90, 90)
      - ColoredBoxWidget pos(20, 20) size(50, 50)

