crates/yakui-widgets/tests/snapshots/row_basic.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 27
expression: view
---
- ListWidget pos(0, 0) size(1000, 1000)
  - ColoredBoxWidget pos(0, 0) size(50, 50)
  - ColoredBoxWidget pos(50, 0) size(50, 50)
  - ColoredBoxWidget pos(100, 0) size(50, 50)

