crates/yakui-widgets/tests/snapshots/row_cross_end.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 142
expression: view
---
- ListWidget pos(0, 0) size(1000, 1000)
  - ColoredBoxWidget pos(0, 950) size(50, 50)
  - ColoredBoxWidget pos(50, 950) size(50, 50)
  - ColoredBoxWidget pos(100, 950) size(50, 50)

