crates/yakui-widgets/tests/snapshots/row_cross_stretch.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 116
expression: view
---
- ListWidget pos(0, 0) size(1000, 1000)
  - ColoredBoxWidget pos(0, 0) size(50, 1000)
  - ColoredBoxWidget pos(50, 0) size(50, 1000)
  - ColoredBoxWidget pos(100, 0) size(50, 1000)

