crates/yakui-widgets/tests/snapshots/row_grow_last.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 64
expression: view
---
- ListWidget pos(0, 0) size(1000, 50)
  - ColoredBoxWidget pos(0, 0) size(50, 50)
  - ColoredBoxWidget pos(50, 0) size(50, 50)
  - FlexibleWidget pos(100, 0) size(900, 50)
    - ColoredBoxWidget pos(100, 0) size(900, 50)

